# api-django

./: .gitignore  Makefile  README.md  package.json  pyproject.toml  setup.cfg
.docker/: .env.dev  .env.hml  .env.prod  Dockerfile.prod  docker-compose.dev.yaml  docker-compose.hml.yaml  docker-compose.prod.yaml
.docker/nginx/: nginx.conf
contrib/: localenv
src/: manage.py  pytest.ini
src/labqoda/: asgi.py  conftest.py  storage_backends.py  urls.py  wsgi.py
src/labqoda/catalog/: admin.py  filters.py  models.py  serializers.py  urls.py  views.py
src/labqoda/catalog/migrations/: 0001_initial.py
src/labqoda/catalog/tests/: conftest.py  test_models.py  test_views_category.py  test_views_product.py
src/labqoda/certificates/: admin.py  models.py  urls.py  views.py
src/labqoda/certificates/migrations/: 0001_initial.py  0002_auto_20200427_1736.py  0003_auto_20200511_1124.py  0004_usercertificate.py  0005_auto_20200528_1847.py  0006_auto_20200529_1910.py  0007_auto_20200531_0940.py
src/labqoda/certificates/services/: generate_certificate.py  utils.py  validate_certificate.py
src/labqoda/certificates/templates/: certificate copy.html  certificate.html  certificate_construction.html  certificate_html.html  manual-user-certificate.html  test_certificate.html  user-certificates.html  validate_certificate.html
src/labqoda/certificates/templatetags/: to_replace.py
src/labqoda/certificates/tests/: conftest.py  test_models.py  test_views.py
src/labqoda/configurations/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
src/labqoda/configurations/migrations/: 0001_initial.py  (+2 more)
src/labqoda/courses/: admin.py  fields.py  filters.py  forms.py  models.py  urls.py  views.py
src/labqoda/enrollments/: admin.py  apps.py  models.py  serializers.py  tests.py  views.py
src/labqoda/forum/: admin.py  choices.py  filters.py  models.py  serializers.py  urls.py  views.py
src/labqoda/index/: views.py
src/labqoda/qoda_emails/: admin.py  apps.py  models.py  services.py
src/labqoda/quizz/: admin.py  forms.py  models.py  serializers.py  urls.py  views.py
src/labqoda/settings/: base.py
src/labqoda/users/: admin.py  models.py  serializers.py  urls.py  views.py
(+68 files in other folders)
